[package]
name = "terrain-rs"
version = "0.0.0"
edition = "2021"
description = "Random terrain visualizer"
authors = ["snowapril"]
repository = "https://github.com/snowapril/terrain-rs"
license = "MIT"
include = ["LICENSE", "Cargo.toml", "src/**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    ".", "generator"
]

[features]

[dependencies]
wgpu = "0.10.1"
winit = "0.25"
pollster = "0.2.4"
async-executor = "1.4.1"
bytemuck = "1.7.2"
log = "0.4.14"
cgmath = "0.18"
terrain-generator = { path = "generator", version = "0.0.0"}

[[bin]]
name = "terrain-rs"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 3
