[package]
name = "terrain-common"
version = "0.0.0"
description = "Common crate for terrain-rs project"
authors = ["snowapril"]
repository = "https://github.com/snowapril/terrain-rs"
license = "MIT"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
