[package]
name = "terrain-generator"
version = "0.0.0"
description = "Random terrain generator based on cellular automata"
authors = ["snowapril"]
repository = "https://github.com/snowapril/terrain-rs"
license = "MIT"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terrain-common = { path = "../common", version = "0.0.0"}
rand = "0.8.4"
